--- a/index.html
+++ b/index.html
@@ -1,33 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | NFT preview card component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Frontend Mentor | NFT preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
 
-  Equilibrium #3429
+      .image-container {
+        position: relative;
+        width: 300px;
+        height: 300px;
+      }
 
-  Our Equilibrium collection promotes balance and calm.
+      .image-container img:nth-child(1) {
+        width: 100%;
+        height: 100%;
+        z-index: 200;
+      }
 
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
+      .image-container img:nth-child(1):hover {
+        opacity: 0.5;
+        cursor: pointer;
+        transition: opacity 50ms ease-in;
+      }
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+      .image-container img:nth-child(1):is(:hover) ~ img:nth-child(3) {
+        opacity: 1;
+        transition: opacity 0.1s ease-in;
+      }
+
+      .overlay {
+        width: 100%;
+        height: 100%;
+        background: cyan;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -100;
+      }
+
+      .image-container img:nth-child(3) {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        opacity: 0;
+        z-index: 10;
+        width: 50px;
+        height: 50px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="card">
+      <div class="image-container">
+        <img src="images/image-equilibrium.jpg" alt="picture of an nft" />
+        <div class="overlay"></div>
+        <img src="images/icon-view.svg" alt="" />
+      </div>
+      <h2>Equilibrium #3429</h2>
+
+      <p>Equilibrium collection promotes balance and calm.</p>
+
+      <img src="images/icon-ethereum.svg" alt="" />
+      <div class="price">0.041 ETH</div>
+      <time>3 days left</time>
+      <div class="line"></div>
+      <p class="nft-author">
+        Creation of <a href="" class="author-name">Jules Wyvern</a>
+      </p>
+    </div>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Your Name Here</a>.
+    </div>
+  </body>
 </html>
