--- a/index.html
+++ b/index.html
@@ -17,82 +17,56 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       .attribution {
-        font-size: 11px;
+        font-size: 15px;
         text-align: center;
+        color: #fff;
       }
       .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-
-      .image-container {
-        position: relative;
-        width: 300px;
-        height: 300px;
-      }
-
-      .image-container img:nth-child(1) {
-        width: 100%;
-        height: 100%;
-        z-index: 200;
-      }
-
-      .image-container img:nth-child(1):hover {
-        opacity: 0.5;
-        cursor: pointer;
-        transition: opacity 50ms ease-in;
-      }
-
-      .image-container img:nth-child(1):is(:hover) ~ img:nth-child(3) {
-        opacity: 1;
-        transition: opacity 0.1s ease-in;
-      }
-
-      .overlay {
-        width: 100%;
-        height: 100%;
-        background: cyan;
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: -100;
-      }
-
-      .image-container img:nth-child(3) {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        opacity: 0;
-        z-index: 10;
-        width: 50px;
-        height: 50px;
+        font-weight: 600;
+        text-decoration: none;
+        color: hsl(315, 100%, 50%);
       }
     </style>
   </head>
   <body>
-    <div class="card">
-      <div class="image-container">
-        <img src="images/image-equilibrium.jpg" alt="picture of an nft" />
-        <div class="overlay"></div>
-        <img src="images/icon-view.svg" alt="" />
+    <div class="wrapper">
+      <div class="card">
+        <div class="image-container">
+          <a class="nft-image" href="#">
+            <img src="images/image-equilibrium.jpg" alt="picture of an nft" />
+          </a>
+          <div class="overlay"></div>
+          <img src="images/icon-view.svg" alt="" />
+        </div>
+
+        <div class="nft-info">
+          <h2>Equilibrium #3429</h2>
+          <p>Our Equilibrium collection promotes balance and calm.</p>
+          <div class="info-bottom">
+            <div class="pricing-container">
+              <img src="images/icon-ethereum.svg" alt="" />
+              <div class="price">0.041 ETH</div>
+            </div>
+
+            <div class="time-container">
+              <img src="images/icon-clock.svg" alt="" />
+              <time>3 days left</time>
+            </div>
+          </div>
+        </div>
+
+        <div class="nft-author">
+          <img src="images/image-avatar.png" alt="" />
+          <p>Creation of <a href="" class="author-name">Jules Wyvern</a></p>
+        </div>
       </div>
-      <h2>Equilibrium #3429</h2>
 
-      <p>Equilibrium collection promotes balance and calm.</p>
-
-      <img src="images/icon-ethereum.svg" alt="" />
-      <div class="price">0.041 ETH</div>
-      <time>3 days left</time>
-      <div class="line"></div>
-      <p class="nft-author">
-        Creation of <a href="" class="author-name">Jules Wyvern</a>
-      </p>
-    </div>
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Danilo</a>.
+      </div>
     </div>
   </body>
 </html>
